# Chess_Studio

./: .gitattributes  .gitignore  README.md  RELEASE_COMMANDS.md  RELEASE_COMMANDS.txt  THIRD_PARTY_NOTICES.md  clock_utils.py  engine.py  main.py  openings.py  openings_data.py  openings_stats.py  pgn_utils.py  pyproject.toml  settings.json  ui_comp.py
.github/workflows/: ci.yml  release.yml
scripts/: build.ps1  fetch-stockfish.ps1  trigger-cicd.ps1
tests/: test_engine.py  test_features.py  test_integration.py  test_openings_stats.py
